@@ -1,3 +1,8 @@
+2010-07-25  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tcl.h       [Bug 3030870] make itcl 3.x built with pre-8.6 work in 8.6
+	* generic/tclBasic.c  Relax the relation between Tcl_CallFrame and CallFrame.
+
 2010-02-18  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/tcl.m4, unix/configure: Fix sh quoting error reported in
